--- a/src/main/resources/templates/group/groupDetailsExpenses.html
+++ b/src/main/resources/templates/group/groupDetailsExpenses.html
@@ -43,15 +43,15 @@
                     <div class="form-row">
                         <div class="col">
                             <div class="md-form">
-                                <input type="text" id="start" class="form-control" th:field="*{title}">
-                                <label for="start">Tytuł Wydatku</label>
+                                <input type="text" id="title" class="form-control" th:field="*{title}">
+                                <label for="title">Tytuł Wydatku</label>
                                 <label th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="validation-message"></label>
                             </div>
                         </div>
                         <div class="col">
                             <div class="md-form">
-                                <input type="text" id="end" class="form-control" th:field="*{amount}">
-                                <label for="end">Kwota Wydatku</label>
+                                <input type="text" id="totalAmount" class="form-control" th:field="*{amount}" >
+                                <label for="totalAmount">Kwota Wydatku</label>
                                 <label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}" class="validation-message"></label>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                             <thead>
                             <tr class="table-fixed">
                                 <th>Tytuł wydatku</th>
-                                <th>Kwotw wydatku</th>
+                                <th>Kwota wydatku</th>
                             </tr>
                             </thead>
                             <!-- Table head -->
@@ -155,92 +155,92 @@
     </div>
 </div>
 
-<div class="container">
+<!--<div class="container">-->
 
-    <div class="row">
-        <div>
-            <ul class="nav nav-pills nav-justified">
-                <h3 class="pr-5 mb-0 mr-5" th:text="${travelGroup.name}"></h3>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/__${groupId}__/members}">Uczestnicy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " th:href="@{/group/details/__${groupId}__}">Szczegóły</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/__${groupId}__/planning}">Planowanie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/group/details/__${groupId}__/expenses}">Wydatki</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/group/details/__${groupId}__/chat}">Chat</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-8">
-            <h3>Wydatki</h3>
-            <table class="table">
+    <!--<div class="row">-->
+        <!--<div>-->
+            <!--<ul class="nav nav-pills nav-justified">-->
+                <!--<h3 class="pr-5 mb-0 mr-5" th:text="${travelGroup.name}"></h3>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/__${groupId}__/members}">Uczestnicy</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link " th:href="@{/group/details/__${groupId}__}">Szczegóły</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/__${groupId}__/planning}">Planowanie</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link active" th:href="@{/group/details/__${groupId}__/expenses}">Wydatki</a>-->
+                <!--</li>-->
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" th:href="@{/group/details/__${groupId}__/chat}">Chat</a>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-sm-8">-->
+            <!--<h3>Wydatki</h3>-->
+            <!--<table class="table">-->
 
-                <tbody>
-                <tr th:each="expense :${travelGroup.expenses}" style="font-size: x-large">
+                <!--<tbody>-->
+                <!--<tr th:each="expense :${travelGroup.expenses}" style="font-size: x-large">-->
 
-                    <td th:text="${expense.getTitle()}"></td>
-                    <td th:text="${expense.getAmount()}"></td>
+                    <!--<td th:text="${expense.getTitle()}"></td>-->
+                    <!--<td th:text="${expense.getAmount()}"></td>-->
 
-                </tr>
+                <!--</tr>-->
 
-                </tbody>
-            </table>
-        </div>
-        <div class="col-sm-4">
-            <div>
-                <form autocomplete="off" action="#" th:object="${createExpenseRequest}" method="post" class="form-horizontal" role="form">
-                    <h2>Dodaj wydatek</h2>
-                    <div class="form-group">
-                        <div class="col-sm-9">
-                            <label th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="validation-message"></label>
-                            <input type="text" th:field="*{title}" placeholder="tytuł" class="form-control" id="title"/>
-                        </div>
-                        <div class="col-sm-9">
-                            <label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}" class="validation-message"></label>
-                            <input type="text" th:field="*{amount}" placeholder="kwota" class="form-control" id="totalAmount"/>
-                        </div>
-
-
-                        <div class="col-sm-9">
-                            <label>Dodaj osoby, które uczestniczyły w wydatku.</label>
-                            <th:block th:each="member : ${travelGroup.getMembers()}">
-                                <div th:if="${currentUserId != member.id}">
-                                    <input type="checkbox" name="debtors" th:value="${member.id}" th:id="${'debtor-'+member.id}"/>
-                                    <label th:text="${member.name}"></label>
-                                    <input th:type="number" th:placeholder="${member.name + ' kwota'}" th:id="${'amount-'+member.id}">
-                                </div>
-                            </th:block>
-                        </div>
-
-                    </div>
-                    <input type="hidden" th:attr="name=groupId" class="form-control" th:value="${travelGroup.id}" id="groupId"/>
-                    <input type="hidden" th:attr="name=authorId" class="form-control" th:value="${currentUserId}" id="authorId"/>
+                <!--</tbody>-->
+            <!--</table>-->
+        <!--</div>-->
+        <!--<div class="col-sm-4">-->
+            <!--<div>-->
+                <!--<form autocomplete="off" action="#" th:object="${createExpenseRequest}" method="post" class="form-horizontal" role="form">-->
+                    <!--<h2>Dodaj wydatek</h2>-->
+                    <!--<div class="form-group">-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<label th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="validation-message"></label>-->
+                            <!--<input type="text" th:field="*{title}" placeholder="tytuł" class="form-control" id="title"/>-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}" class="validation-message"></label>-->
+                            <!--<input type="text" th:field="*{amount}" placeholder="kwota" class="form-control" id="totalAmount"/>-->
+                        <!--</div>-->
 
 
-                    <div class="form-group">
-                        <div class="col-sm-9">
-                            <button type="button" class="btn btn-primary" th:onclick="'createExpense(\'\');'">Dodaj</button>
-                        </div>
-                    </div>
+                        <!--<div class="col-sm-9">-->
+                            <!--<label>Dodaj osoby, które uczestniczyły w wydatku.</label>-->
+                            <!--<th:block th:each="member : ${travelGroup.getMembers()}">-->
+                                <!--<div th:if="${currentUserId != member.id}">-->
+                                    <!--<input type="checkbox" name="debtors" th:value="${member.id}" th:id="${'debtor-'+member.id}"/>-->
+                                    <!--<label th:text="${member.name}"></label>-->
+                                    <!--<input th:type="number" th:placeholder="${member.name + ' kwota'}" th:id="${'amount-'+member.id}">-->
+                                <!--</div>-->
+                            <!--</th:block>-->
+                        <!--</div>-->
 
-                    <!--<span th:utext="${successMessage}"></span>-->
+                    <!--</div>-->
+                    <!--<input type="hidden" th:attr="name=groupId" class="form-control" th:value="${travelGroup.id}" id="groupId"/>-->
+                    <!--<input type="hidden" th:attr="name=authorId" class="form-control" th:value="${currentUserId}" id="authorId"/>-->
 
 
-                </form>
-            </div>
+                    <!--<div class="form-group">-->
+                        <!--<div class="col-sm-9">-->
+                            <!--<button type="button" class="btn btn-primary" th:onclick="'createExpense(\'\');'">Dodaj</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-        </div>
-    </div>
-</div>
+                    <!--&lt;!&ndash;<span th:utext="${successMessage}"></span>&ndash;&gt;-->
+
+
+                <!--</form>-->
+            <!--</div>-->
+
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 <!-- Bootstrap tooltips -->
