Fixed letter bug

--- a/src/main/resources/templates/group/groupDetailsPlanning.html
+++ b/src/main/resources/templates/group/groupDetailsPlanning.html
@@ -49,14 +49,14 @@
                             <input id="questionInput"
                                    type="text"
                                    class="form-control"
-                                   placeholder="*Tematjkh"
+                                   placeholder="*Temat"
                             />
                         </div>
                         <div class="custom-control py-2">
                             <input id="endDate"
                                    type="text"
                                    class="form-control"
-                                   placeholder="*Aktywne do"
+                                   placeholder="*Aktywna do"
                                    onfocus="(this.type='date')"
                             />
                         </div>
