--- a/src/main/resources/templates/group/groupDetailsChat.html
+++ b/src/main/resources/templates/group/groupDetailsChat.html
@@ -67,7 +67,7 @@
                         <!-- Table  -->
                     </div>
                     <div class="form-group shadow-textarea p-3 mb-0 text-right">
-                        <textarea class="form-control z-depth-1" id="messageToSend" rows="3" placeholder="Write something here..."></textarea>
+                        <textarea class="form-control z-depth-1" id="messageToSend" rows="3" placeholder="Napisz coś tutaj..."></textarea>
                         <button class="btn btn-md blue lighten-1 text-white mt-2 mr-0"
                                 id="sendBtn">Wyślij
                         </button >
