--- a/src/main/resources/templates/group/groupDetailsExpenses.html
+++ b/src/main/resources/templates/group/groupDetailsExpenses.html
@@ -106,7 +106,7 @@
     <div class="row mx-sm-2 my-lg-0">
         <div class="col-12">
             <div class="card my-4">
-                <div class="card-header blue lighten-1 white-text d-flex">
+                <div class="card-header blue lighten-1 white-text d-flex p-2">
                     <!--<strong class="h4 flex-grow-1 px-2 m-auto">Znajomi</strong>-->
                     <div class="mr-auto my-auto">
                         <div class="nav-item dropdown">
@@ -121,9 +121,8 @@
                             </div>
                         </div>
                     </div>
-                        <button class="btn green btn-sm" type="button" data-toggle="modal" data-target="#invite">
+                        <button class="btn green btn-sm my-1" type="button" data-toggle="modal" data-target="#invite">
                             Dodaj Wydatek
-                            <i class="pl-1 fas fa-dollar-sign"></i>
                         </button>
                 </div>
 
